--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace-task": "^0.11.0",
-    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.2",
     "gulp.spritesmith": "^6.2.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "gulp-sass": "^2.2.0"
   }
 }
